kubernetes/api-gateway.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dnipro-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: dnipro-external-ip
spec:
  backend:
    serviceName: api-gateway
    servicePort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: api-gateway

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - image: gcr.io/dnipro-store/api-gateway:0.0.7
          name: api-gateway
          ports:
            - containerPort: 8080
